<resources>
    <string name="app_name">PlanAct</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Calendar</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">Activities</string>
    <!-- Preference Titles -->
    <string name="notifications_header">Notifications</string>
    <string name="language_header">Language</string>

    <!-- Notification Preferences -->
    <string name="toggle_title"></string>
    <string name="period_title">Notification period</string>


    <string name="notifications_disabled">Disabled</string>
    <string name="notifications_enabled">Enabled</string>

    <!-- Language Preferences -->
    <string name="current_language_title">Current Language</string>
    <string name="default_language">English</string>
    <string name="title_settings">Settings</string>

    <string name="activity_name">Title</string>
    <string name="activity_location">Location</string>
    <string name="activity_time">Time</string>
    <string name="activity_description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_details">Details</string>
    <string name="activity_image_location">Image Url</string>
    <string name="custom_toolbar">Create Activity</string>

    <string name="activity_date">Date</string>
    <string name="new_activity_category">Category</string>
    <string name="search_icon_description">Search</string>
    <string name="activity_type">type</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="title_photos">Photos</string>
    <string name="activity_camera">Camera</string>
    <string name="confirm_deletion">Are you sure you want to delete this activity?</string>
    <string name="positive_confirmation">Yes</string>
    <string name="cancel">Cancel</string>

    <string-array name="category_options">
        <item>Choose an option</item>
        <item>Job</item>
        <item>Free time</item>
        <item>Travelling</item>
        <item>Other</item>
    </string-array>



    <string name="google_maps_key">AIzaSyD5GMVyzbS4wyTn8WOU5z_KKnuh_nbDrUU</string>
    <string name="geocode_maps_api_key">65b7675c7cb4e054450479sdia6045c</string>
    <string name="default_period">7 days</string>
    <string name="succesfull_deletion_message">Successfully deleted</string>
    <string name="succesfull_adding_message">Successfully added</string>
    <string name="error_adding_message">Error adding</string>
    <string name="error_basic_message">Error, try again later</string>
    <string name="error_edit_message">Please edit before saving</string>
    <string name="error_adding_image">Error adding an image</string>
    <string name="succesfull_saving_message">Successfully saved</string>
    <string name="title_activity_details">Activity Details</string>
    <string name="title_new_activity">Add activity</string>
    <string name="error_number_of_images_message">No more than 10 images allowed</string>
    <string name="enter_image_message">Enter image URL for download</string>
    <string name="download_button">Download</string>
    <string name="error_downloading_image_message">Failed to download image</string>
    <string name="cancel_button">Cancel</string>
    <string name="datetime_format_error_message">Date or time not in correct format</string>
    <string name="category_selection_error_message">Category not selected</string>
    <string name="period_message_first">less than 1 hour</string>
    <string name="period_message_second">between 1 hour and a day</string>
    <string name="period_message_third">between 1 day and 7 days</string>

    <!--    <string-array name="category_options">-->
    <!--        <item>Nije izabrano</item>-->
    <!--        <item>Posao</item>-->
    <!--        <item>Slobodno Vrijeme</item>-->
    <!--        <item>Putovanja</item>-->
    <!--        <item>Ostalo</item>-->
    <!--    </string-array>-->


</resources>