<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <PreferenceCategory app:title="@string/notifications_header"

        >
        <androidx.preference.SwitchPreference

            app:key="toggle"
            app:summaryOff="@string/notifications_disabled"
            app:summaryOn="@string/notifications_enabled"
            app:title="@string/toggle_title" />


        <ListPreference
            app:entries="@array/noti_period_entries"
            app:entryValues="@array/noti_period_entries"
            app:key="period"
            android:defaultValue="@string/default_period"
            app:dependency="toggle"

            app:title="@string/period_title"
            app:useSimpleSummaryProvider="true"
            />





    </PreferenceCategory>

    <PreferenceCategory app:title="@string/language_header">

        <ListPreference
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language_preference"
            app:summary="@string/default_language"
            app:title="@string/current_language_title" />

    </PreferenceCategory>



</PreferenceScreen>