<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.unibl.etf.mr.planact.ui.home.HomeFragment"
        android:label="@string/title_activity_main"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="org.unibl.etf.mr.planact.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>



    <fragment
        android:id="@+id/navigation_notifications"
        android:name="org.unibl.etf.mr.planact.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="org.unibl.etf.mr.planact.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings"
        />

    <fragment
        android:id="@+id/navigation_details"
        android:name="org.unibl.etf.mr.planact.ui.DetailsFragment"

        tools:layout="@layout/fragment_details"
        >
        <action
            android:id="@+id/action_navigation_details_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_details_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_details_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>
</navigation>